// network object

syntax = "proto3";

package netproto;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/meta.proto";

// ---------------------------- Security API ----------------------------
// security group rpc service
service SecurityGroupApiV1 {
    // options for auto generating rest endpoints
    option(venice.naplesRestService) = {
        Object: "SecurityGroup",
        Method: ["list", "post", "put", "delete"],
        Pattern: "/{ObjectMeta.Tenant}/{ObjectMeta.Namespace}/{ObjectMeta.Name}"
        Prefix: "api/sgs"
    };

    rpc GetSecurityGroup (api.ObjectMeta) returns (SecurityGroup) {};
    rpc ListSecurityGroups (api.ListWatchOptions) returns (SecurityGroupList) {};
    rpc WatchSecurityGroups (api.ListWatchOptions) returns (stream SecurityGroupEventList) {};
    rpc UpdateSecurityGroup (SecurityGroup) returns (SecurityGroup) {};
    rpc SecurityGroupOperUpdate (stream SecurityGroupEvent) returns (api.TypeMeta) {};

}

// security group object
message SecurityGroup {
    api.TypeMeta   TypeMeta     = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
    api.ObjectMeta ObjectMeta   = 2 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,omitempty"];
    SecurityGroupSpec    Spec   = 3 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "spec,omitempty"];
    SecurityGroupStatus  Status = 4 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "status,omitempty"];
}

// security group spec
message SecurityGroupSpec {
    string SecurityProfile      = 1;  // security profile name
}

// security group status
message SecurityGroupStatus {
    uint64 SecurityGroupID = 1; // security group id
}

// list of security groups
message SecurityGroupList {
    repeated SecurityGroup SecurityGroups = 1;
}

// security group watch event
message SecurityGroupEvent {
    api.EventType EventType       = 1 [(gogoproto.jsontag) = "event-type,omitempty"];
    SecurityGroup SecurityGroup   = 2 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "security-group,omitempty"];
}

// security group watch events batched
message SecurityGroupEventList {
    repeated SecurityGroupEvent SecurityGroupEvents  = 1;
}

